--- a/.env
+++ b/.env
@@ -28,5 +28,5 @@ CORS_ALLOW_ORIGIN=^https?://localhost(:[0-9]+)?$
 # Format described at https://www.doctrine-project.org/projects/doctrine-dbal/en/latest/reference/configuration.html#connecting-using-a-url
 # For an SQLite database, use: "sqlite:///%kernel.project_dir%/var/data.db"
 # Configure your db driver and server_version in config/packages/doctrine.yaml
-DATABASE_URL=mysql://root:@localhost:3306/swivl
+DATABASE_URL=mysql://root:@localhost:3306/swivl_test_api
 ###< doctrine/doctrine-bundle ###
